# colegiocanino

./: .env.example  .gitignore  404.html  README.md  Taskfile.yaml  Taskfile.yml  bootstrap.py  cypress.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  search.html  test_output.txt  tsconfig.app.json  vite.config.ts
.github/workflows/: frontend_checks.yaml
client/: cypress.config.js  cypress.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/cypress/e2e/: example.cy.ts  landing_page.cy.ts  login.cy.ts  profile.cy.ts
client/src/: App.tsx  custom.d.ts  style.css
client/src/api/: axiosConfig.ts
client/src/components/: EditEnrollmentModal.tsx  ForgotPasswordModal.tsx  PageTransition.tsx  RoleGuard.tsx  Toast.tsx  UserTypeGuard.tsx
client/src/pages/ClientPage/: ClientPage.tsx
client/src/pages/ClientPage/children/: ClientDashboard.tsx  ClientProfile.tsx  EnrollCanine.tsx  MyPets.tsx  PetDetailPage.tsx
client/src/pages/ClientPage/components/: EnrollmentDetails.tsx
client/src/pages/HomePage/: HomePage.tsx
client/src/pages/InternalUsersPage/: InternalUsers.tsx
client/src/pages/InternalUsersPage/children/: DashboardContent.tsx  EnrollmentByPlanReport.tsx  ListCanines.tsx  ManageUsers.tsx  RegisterAttendance.tsx  RegisterUser.tsx  ReportsPage.tsx  TransportReport.tsx  UpdateUser.tsx  ViewAttendance.tsx
client/src/pages/LoginPage/: LoginPage.tsx
client/src/pages/RegisterPage/: RegisterPage.tsx
client/src/pages/ResetPassword/: ResetPassword.tsx
client/src/utils/: toast.ts  validationRules.ts
cypress/e2e/: register-any-user.cy.js  register-internal.cy.js  update-internal-user.cy.js  withdraw-dog.cy.js
daily_workflow/: index.html
docs/: mkdocs.yml  pull_request_template.md
docs/diagrams/: layer.mmd  relational_model.mmd
docs/internal/: daily_workflow.md  getting_started.md  index.md  project_info.md
getting_started/: index.html
project_info/: index.html
search/: search_index.json
server/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
server/api/: admin.py  models.py  serializers.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_remove_attendance_observations.py  0003_remove_transportservice_price.py  0004_remove_transportservice_name.py  0005_remove_enrollment_total_price.py  0006_alter_user_document_id.py
server/colegiocanino/: asgi.py  settings.py  urls.py  wsgi.py
tests/e2e/: cypress.config.js  results.xml  results_final.xml
tests/e2e/cypress/support/: commands.js  e2e.js
tests/e2e/specs/: _test_data.ts  _utils.ts  api_canines.cy.ts  api_enrollments.cy.ts  api_users.cy.ts  edit_enrollment_internal.cy.ts  example.cy.ts  landing_page.cy.ts  list_canines.cy.ts  login.cy.ts  modify_enrollment.cy.ts  profile.cy.ts  register-internal.cy.js  update-internal-user.cy.js  withdraw-dog.cy.js
